[metadata]
name = redis
version = attr: redis.__version__
description = Python client for Redis key-value store
long_description = file: README.rst
url = https://github.com/andymccurdy/redis-py
author = Andy McCurdy
author_email = sedrik@gmail.com
maintainer = Andy McCurdy
maintainer_email = sedrik@gmail.com
keywords = Redis, key-value store
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy


[options]
packages = redis
python_requires = >=3.5

[options.extras_require]
hiredis = hiredis>=0.1.3

[flake8]
exclude = .venv,.tox,dist,docs,build,*.egg,redis_install,env,venv,.undodir
